--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -7,7 +7,7 @@ on:
       - 'src/**'
       - 'build.sbt'
       - 'Makefile'
-  pull_requests:
+  pull_request:
       types: [opened, reopened]
 
 
